--- a/src/admin_login_forgot.html
+++ b/src/admin_login_forgot.html
@@ -20,7 +20,7 @@
 
   <div class="forget">
     <div>
-      <P id="title">Forget Password</P>
+      <P id="title">Admin Forget Password</P>
     </div>
     <div class="input">
       <div>
