--- a/src/create_election.html
+++ b/src/create_election.html
@@ -17,6 +17,7 @@
         <a href="admin_election.html" class="select">Election</a>
         <a href="user_list.html" class="select">User List</a>
         <a href="dashboard.html" class="select">Dashboard</a>
+        <a href="transaction.html" class="select">Transaction</a>
     </div>
 
     <div id="election">
