--- a/src/reset_password.html
+++ b/src/reset_password.html
@@ -24,15 +24,15 @@
     <div class="input">
       <div>
         <p>Old Password</p>
-        <input type="text" name="old_password" id="old_password"/>
+        <input type="password" name="old_password" id="old_password"/>
       </div>
       <div>
         <p>New Password</p>
-        <input type="text" name="new_password" id="new_password"/>
+        <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required name="new_password" id="new_password" />
       </div>
       <div>
         <p>Comfirm Password</p>
-        <input type="text" name="confirm_password" id="confirm_password"/>
+        <input type="password" name="confirm_password" id="confirm_password"/>
       </div>
       <div class="button">
         <input type="button" name="reset-btn" id="reset-btn" value="Reset Password" onclick="javascript:userResetPassword()"/>
