--- a/src/admin_reset_password.html
+++ b/src/admin_reset_password.html
@@ -17,6 +17,7 @@
         <a href="admin_election.html" class="select">Election</a>
         <a href="user_list.html" class="select">User List</a>
         <a href="dashboard.html" class="select">Dashboard</a>
+        <a href="transaction.html" class="select">Transaction</a>
   </div>
 
   <div class="block">
@@ -26,15 +27,15 @@
     <div class="input">
       <div>
         <p>Old Password</p>
-        <input type="text" name="old_password" id="old_password"/>
+        <input type="password" name="old_password" id="old_password"/>
       </div>
       <div>
         <p>New Password</p>
-        <input type="text" name="new_password" id="new_password"/>
+        <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required name="new_password" id="new_password"/>
       </div>
       <div>
         <p>Comfirm Password</p>
-        <input type="text" name="confirm_password" id="confirm_password"/>
+        <input type="password" name="confirm_password" id="confirm_password"/>
       </div>
       <div class="button">
         <input type="button" name="reset-btn" id="reset-btn" value="Reset Password" onclick="javascript:adminResetPassword()"/>
